objects/Case.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <businessProcesses>
        <fullName>Partner Case</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Customer Case</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>client</label>
        <referenceTo>client__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approve__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1040</fullName>
                </value>
                <value>
                    <fullName>GC1060</fullName>
                </value>
                <value>
                    <fullName>GC3020</fullName>
                </value>
                <value>
                    <fullName>GC3040</fullName>
                </value>
                <value>
                    <fullName>GC3060</fullName>
                </value>
                <value>
                    <fullName>GC5020</fullName>
                </value>
                <value>
                    <fullName>GC5040</fullName>
                </value>
                <value>
                    <fullName>GC5060</fullName>
                </value>
                <value>
                    <fullName>GC1020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rejecte__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejecte</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Date__c</fullName>
        <label>Case Date</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Today</fullName>
                </value>
                <value>
                    <fullName>Last Week</fullName>
                </value>
                <value>
                    <fullName>Last Month</fullName>
                </value>
                <value>
                    <fullName>Current Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GraphQl_Id__c</fullName>
        <label>GraphQl Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rejected_Reason__c</fullName>
        <label>Rejected Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GraphQL_Conversation_Id__c</fullName>
        <label>GraphQL Conversation Id</label>
        <type>TextArea</type>
    </fields>
    <recordTypes>
        <fullName>Claims</fullName>
        <active>true</active>
        <businessProcess>Customer Case</businessProcess>
        <label>Claims</label>
    </recordTypes>
    <recordTypes>
        <fullName>Network</fullName>
        <active>true</active>
        <businessProcess>Customer Case</businessProcess>
        <label>Network</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_Case</fullName>
        <active>true</active>
        <businessProcess>Partner Case</businessProcess>
        <label>Partner Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Case</fullName>
        <active>true</active>
        <businessProcess>Customer Case</businessProcess>
        <label>Customer Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Member_Services</fullName>
        <active>true</active>
        <businessProcess>Partner Case</businessProcess>
        <label>Member Services</label>
    </recordTypes>
</CustomObject>